Continue working on static data for site.

--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
                     <li>I was commissioned to build a travel community, Roam, for users to share tips about their favorite locations around the world.</li>
                     <li>Full stack application using Express.js Framework</li>
                     <li>Node.js programming environment and with npm</li>
-                    <li>CSS Framework: <a href="purecss.io">Pure.css</a></li>
+                    <li>CSS Framework: <a href="https://purecss.io">Pure.css</a></li>
                     <li>SQL</li>
                 </ul>
 
                 <button class="button-choose pure-button">See Live!</button>
+                <br>
+                <br>
+                <p>or view on <a href="https://github.com/NoCodingGenius/roam">GitHub</a></p>
             </div>
         </div>
 
@@ -83,15 +86,18 @@
                 </div>
 
                 <ul class="pricing-table-list">
-                    <li>Free setup</li>
-                    <li>Use your own domain</li>
-                    <li>Standard customer support</li>
-                    <li>10GB file storage</li>
-                    <li>5 databases</li>
-                    <li>Unlimited bandwidth</li>
+                    <li>Name of Project</li>
+                    <li>Description of Project</li>
+                    <li>Frameworks used or etc.</li>
+                    <li>Frameworks used or etc.</li>
+                    <li>Frameworks used or etc.</li>
+                    <li>Frameworks used or etc.</li>
                 </ul>
 
                 <button class="button-choose pure-button">See Live!</button>
+                <br>
+                <br>
+                <p>or view on <a href="#">GitHub</a></p>
             </div>
         </div>
 
@@ -106,15 +112,18 @@
                 </div>
 
                 <ul class="pricing-table-list">
-                    <li>Free setup</li>
-                    <li>Use your own domain</li>
-                    <li>Standard customer support</li>
-                    <li>10GB file storage</li>
-                    <li>5 databases</li>
-                    <li>Unlimited bandwidth</li>
+                    <li>Open Source Project</li>
+                    <li>Name of Porject</li>
+                    <li>Description of contribution</li>
+                    <li>Description of contribution</li>
+                    <li>Description of contribution</li>
+                    <li>Description of contribution</li>
                 </ul>
 
                 <button class="button-choose pure-button">See Live!</button>
+                <br>
+                <br>
+                <p>or view on <a href="#">GitHub</a></p>
             </div>
         </div>
 
@@ -123,10 +132,7 @@
     <div id="about" class="information pure-g">
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="l-box">
-                <h3 class="information-head">Photo</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-                </p>
+                <img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbpAAAAJDY4M2FhN2MwLTg2YWUtNDJjOC1iZTJjLTM2MjllY2YxYjlmZA.jpg" alt="linkedin">
             </div>
         </div>
 
@@ -134,8 +140,7 @@
             <div class="l-box">
                 <h3 class="information-head">Bio</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
+                    I want to include the following in this section: tech newbie, enjoy coding and learning new things but I am not a genius by any means, love all things spirituality, want to combine both of those passions to find a best fit company that will allow me to make a positive contribution to the World.
                 </p>
             </div>
         </div>
@@ -144,11 +149,15 @@
 </div> <!-- end l-content -->
 
 <div class="footer l-box">
-    <p>
+  <p>
+        Let's connect! Ways to find me on the web:
+        <i class="fa fa-github"></i>
         <a href='https://github.com/NoCodingGenius'>GitHub</a>
+        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
         <a href="https://www.linkedin.com/in/latoya-williams-82a665112/">LinkedIn</a>
+        <i class="fa fa-rss-square" aria-hidden="true"></i>
         <a href="https://steemit.com/@nocodinggenius">Blog</a>
-    </p>
+  </p>
 </div>
 
 
