Make styling changes from Rachels feedback.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 <div class="pure-menu pure-menu-horizontal">
-    <a href="#" class="pure-menu-heading">No Coding Genius</a>
+    <a href="https://github.com/NoCodingGenius" class="pure-menu-heading">LaToya Williams</a>
     <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#home" class="pure-menu-link">Home</a></li>
         <li class="pure-menu-item pure-menu-selected"><a href="#portfolio" class="pure-menu-link">Portfolio</a></li>
@@ -42,105 +42,77 @@
 
 <div id="home" class="banner">
     <h1 class="banner-head">
-        LaToya Williams<br>
-        No Coding Genius
+        LaToya Williams <br>
+        No Coding Genius...
     </h1>
 </div>
 
 <div id="portfolio" class="l-content">
     <div class="pricing-tables pure-g">
         <div class="pure-u-1 pure-u-md-1-3">
-            <div class="pricing-table pricing-table-free">
+            <div class="project-table">
                 <div class="pricing-table-header">
-                    <h2>Project #1</h2>
-
-                    <span class="pricing-table-price">
-                        IMG <span>or maybe a gif</span>
-                    </span>
+                    <img class="pricing-table-header-image" src="https://raw.githubusercontent.com/NoCodingGenius/roam/views/public/roambackground.jpeg" alt="roaming">
                 </div>
 
                 <ul class="pricing-table-list">
-                    <li>"Roam"</li>
+                    <li>ROAM</li>
                     <li>I was commissioned to build a travel community, Roam, for users to share tips about their favorite locations around the world.</li>
-                    <li>Full stack application using Express.js Framework</li>
-                    <li>Node.js programming environment and with npm</li>
-                    <li>CSS Framework: <a href="https://purecss.io">Pure.css</a></li>
-                    <li>SQL</li>
+                    <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, and SQL </li>
+                    <li><button class="button-choose pure-button">See Live!</button>
+                    <p>or view on <a href="https://github.com/NoCodingGenius/roam">GitHub</a></p></li>
                 </ul>
-
-                <button class="button-choose pure-button">See Live!</button>
-                <br>
-                <br>
-                <p>or view on <a href="https://github.com/NoCodingGenius/roam">GitHub</a></p>
             </div>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
-            <div class="pricing-table pricing-table-biz pricing-table-selected">
+            <div class="project-table">
                 <div class="pricing-table-header">
-                    <h2>Project #2</h2>
-
-                    <span class="pricing-table-price">
-                        IMG <span>or maybe a gif</span>
-                    </span>
+                    <img class="pricing-table-header-image" src="https://thumb10.shutterstock.com/mosaic_250/2280971/518838757/stock-vector-productivity-round-colorful-illustration-vector-flat-concept-symbol-made-with-word-productivity-518838757.jpg" alt="">
                 </div>
 
                 <ul class="pricing-table-list">
-                    <li>Name of Project</li>
-                    <li>Description of Project</li>
-                    <li>Frameworks used or etc.</li>
-                    <li>Frameworks used or etc.</li>
-                    <li>Frameworks used or etc.</li>
-                    <li>Frameworks used or etc.</li>
+                    <li>JUST FOR TODAY</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><button class="button-choose pure-button">See Live!</button>
+                    <p>or view on <a href="#">GitHub</a></p></li>
                 </ul>
-
-                <button class="button-choose pure-button">See Live!</button>
-                <br>
-                <br>
-                <p>or view on <a href="#">GitHub</a></p>
             </div>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
-            <div class="pricing-table pricing-table-biz pricing-table-selected">
+            <div class="project-table">
                 <div class="pricing-table-header">
-                    <h2>Open Source Projects</h2>
-
-                    <span class="pricing-table-price">
-                        IMG <span>or maybe a gif</span>
-                    </span>
+                    <img class="pricing-table-header-image" src="https://shefcompsoc.uk/images/social/github.png" alt="">
                 </div>
 
                 <ul class="pricing-table-list">
-                    <li>Open Source Project</li>
-                    <li>Name of Porject</li>
-                    <li>Description of contribution</li>
-                    <li>Description of contribution</li>
-                    <li>Description of contribution</li>
-                    <li>Description of contribution</li>
+                    <li>OPEN SOURCE PROJECT</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><button class="button-choose pure-button">See Live!</button>
+                    <p>or view on <a href="#">GitHub</a></p></li>
                 </ul>
 
-                <button class="button-choose pure-button">See Live!</button>
-                <br>
-                <br>
-                <p>or view on <a href="#">GitHub</a></p>
             </div>
         </div>
 
     </div> <!-- end pricing-tables -->
 
-    <div id="about" class="information pure-g">
+    <div id="about" class="about-section information pure-g">
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="l-box">
-                <img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbpAAAAJDY4M2FhN2MwLTg2YWUtNDJjOC1iZTJjLTM2MjllY2YxYjlmZA.jpg" alt="linkedin">
+                <img class="about-photo" src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbpAAAAJDY4M2FhN2MwLTg2YWUtNDJjOC1iZTJjLTM2MjllY2YxYjlmZA.jpg" alt="linkedin">
             </div>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="l-box">
-                <h3 class="information-head">Bio</h3>
+                <h4 class="info-head">About</h4>
                 <p>
-                    I want to include the following in this section: tech newbie, enjoy coding and learning new things but I am not a genius by any means, love all things spirituality, want to combine both of those passions to find a best fit company that will allow me to make a positive contribution to the World.
+                    I am a tech newbie that loves all things web development. I am not a genius but I emjoy working hard and learning new things.
+                    What does come second nature for me is all things spiritual and metaphysical. I want to combine both of those passions to find a best fit company that will allow me to make a positive contribution to the World.
                 </p>
             </div>
         </div>
@@ -150,7 +122,6 @@
 
 <div class="footer l-box">
   <p>
-        Let's connect! Ways to find me on the web:
         <i class="fa fa-github"></i>
         <a href='https://github.com/NoCodingGenius'>GitHub</a>
         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
