Make styling changes from Rachels feedback.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <ul class="pricing-table-list">
                     <li>ROAM</li>
                     <li>I was commissioned to build a travel community, Roam, for users to share tips about their favorite locations around the world.</li>
-                    <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, and SQL </li>
+                    <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
                     <li><button class="button-choose pure-button">See Live!</button>
                     <p>or view on <a href="https://github.com/NoCodingGenius/roam">GitHub</a></p></li>
                 </ul>
@@ -68,13 +68,13 @@
         <div class="pure-u-1 pure-u-md-1-3">
             <div class="project-table">
                 <div class="pricing-table-header">
-                    <img class="pricing-table-header-image" src="https://thumb10.shutterstock.com/mosaic_250/2280971/518838757/stock-vector-productivity-round-colorful-illustration-vector-flat-concept-symbol-made-with-word-productivity-518838757.jpg" alt="">
+                    <img class="pricing-table-header-image" src="https://us.123rf.com/450wm/olechowski/olechowski1207/olechowski120700024/14475156-productivity-concept-in-word-tag-cloud-on-black-background.jpg?ver=6" alt="">
                 </div>
 
                 <ul class="pricing-table-list">
                     <li>JUST FOR TODAY</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>This is a simple to-do list simgle page app, where users can store their tasks in a database, see their tasks, and mark them complete.</li>
+                    <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
                     <li><button class="button-choose pure-button">See Live!</button>
                     <p>or view on <a href="#">GitHub</a></p></li>
                 </ul>
