Add social media links with icons.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A personal portfolio site for a web developer.">
     <title>Personal Porfolio: No Coding Genius</title>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
 
@@ -122,12 +123,15 @@
 
 <div class="footer l-box">
   <p>
-        <i class="fa fa-github"></i>
-        <a href='https://github.com/NoCodingGenius'>GitHub</a>
-        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-        <a href="https://www.linkedin.com/in/latoya-williams-82a665112/">LinkedIn</a>
-        <i class="fa fa-rss-square" aria-hidden="true"></i>
-        <a href="https://steemit.com/@nocodinggenius">Blog</a>
+        <a href='https://github.com/NoCodingGenius'>
+          <img class="footer-image" src="http://www.jordland.com/img/social-media/github-w.png" alt="github">
+        </a>
+        <a href="https://steemit.com/@nocodinggenius">
+          <img class="footer-image" src="https://steemit-production-imageproxy-thumbnail.s3.amazonaws.com/U5dth7PSzdr6UAzdJFQDAkZCTgAuAtT_1680x8400" alt="steemit-blog">
+        </a>
+        <a href="https://www.linkedin.com/in/latoya-williams-82a665112/">
+          <img class="footer-image" src="https://seeklogo.com/images/L/linkedin-icon-logo-05B2880899-seeklogo.com.png" alt="linkedin">
+        </a>
   </p>
 </div>
 
