Change background color of last list item.

--- a/index.html
+++ b/index.html
@@ -1,141 +1,129 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A personal portfolio site for a web developer.">
-    <title>Personal Porfolio: No Coding Genius</title>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A personal portfolio site for a web developer.">
+  <title>Personal Porfolio: No Coding Genius</title>
 
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
+  <link rel="stylesheet" href="style.css">
 
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-old-ie-min.css">
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
-    <!--<![endif]-->
-
-
-        <!--[if lte IE 8]>
-            <link rel="stylesheet" href="css/layouts/pricing-old-ie.css">
-        <![endif]-->
-        <!--[if gt IE 8]><!-->
-            <link rel="stylesheet" href="style.css">
-        <!--<![endif]-->
 </head>
+
 <body>
 
-
-
-
-
-
-
-<div class="pure-menu pure-menu-horizontal">
+  <div class="pure-menu pure-menu-horizontal">
     <a href="https://github.com/NoCodingGenius" class="pure-menu-heading">LaToya Williams</a>
     <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#home" class="pure-menu-link">Home</a></li>
-        <li class="pure-menu-item pure-menu-selected"><a href="#portfolio" class="pure-menu-link">Portfolio</a></li>
-        <li class="pure-menu-item"><a href="#about" class="pure-menu-link">About</a></li>
+      <li class="pure-menu-item"><a href="#home" class="pure-menu-link">Home</a></li>
+      <li class="pure-menu-item"><a href="#portfolio" class="pure-menu-link">Portfolio</a></li>
+      <li class="pure-menu-item"><a href="#about" class="pure-menu-link">About</a></li>
     </ul>
-</div>
+  </div>
 
-<div id="home" class="banner">
+  <div id="home" class="banner">
     <h1 class="banner-head">
         LaToya Williams <br>
         No Coding Genius...
     </h1>
-</div>
+  </div>
 
-<div id="portfolio" class="l-content">
+  <div id="portfolio">
     <div class="pricing-tables pure-g">
-        <div class="pure-u-1 pure-u-md-1-3">
-            <div class="project-table">
-                <div class="pricing-table-header">
-                    <img class="pricing-table-header-image" src="https://raw.githubusercontent.com/NoCodingGenius/roam/views/public/roambackground.jpeg" alt="roaming">
-                </div>
+      <div class="pure-u-1 pure-u-md-1-3">
+        <div class="project-table">
+          <div class="pricing-table-header">
+            <img class="pricing-table-header-image" src="https://raw.githubusercontent.com/NoCodingGenius/roam/views/public/roambackground.jpeg" alt="roaming">
+          </div>
 
-                <ul class="pricing-table-list">
-                    <li>ROAM</li>
-                    <li>I was commissioned to build a travel community, Roam, for users to share tips about their favorite locations around the world.</li>
-                    <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
-                    <li><button class="button-choose pure-button">See Live!</button>
-                    <p>or view on <a href="https://github.com/NoCodingGenius/roam">GitHub</a></p></li>
-                </ul>
-            </div>
+          <ul class="pricing-table-list">
+            <li>ROAM</li>
+            <li>I was commissioned to build a travel community, Roam, for users to share tips about their favorite locations around the world.</li>
+            <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
+            <li class="last-li"><button class="button-choose pure-button">See Live!</button>
+              <p class="github-p">or view on <a href="https://github.com/NoCodingGenius/roam">GitHub</a></p>
+            </li>
+          </ul>
         </div>
+      </div>
 
-        <div class="pure-u-1 pure-u-md-1-3">
-            <div class="project-table">
-                <div class="pricing-table-header">
-                    <img class="pricing-table-header-image" src="https://us.123rf.com/450wm/olechowski/olechowski1207/olechowski120700024/14475156-productivity-concept-in-word-tag-cloud-on-black-background.jpg?ver=6" alt="">
-                </div>
+      <div class="pure-u-1 pure-u-md-1-3">
+        <div class="project-table">
+          <div class="pricing-table-header">
+            <img class="pricing-table-header-image" src="https://us.123rf.com/450wm/olechowski/olechowski1207/olechowski120700024/14475156-productivity-concept-in-word-tag-cloud-on-black-background.jpg?ver=6" alt="">
+          </div>
 
-                <ul class="pricing-table-list">
-                    <li>JUST FOR TODAY</li>
-                    <li>This is a simple to-do list simgle page app, where users can store their tasks in a database, see their tasks, and mark them complete.</li>
-                    <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
-                    <li><button class="button-choose pure-button">See Live!</button>
-                    <p>or view on <a href="#">GitHub</a></p></li>
-                </ul>
-            </div>
+          <ul class="pricing-table-list">
+            <li>JUST FOR TODAY</li>
+            <li>This is a simple to-do list simgle page app, where users can store their tasks in a database, see their tasks, and mark them complete.</li>
+            <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
+            <li class="last-li"><button class="button-choose pure-button">See Live!</button>
+              <p class="github-p">or view on <a href="#">GitHub</a></p>
+            </li>
+          </ul>
         </div>
+      </div>
 
-        <div class="pure-u-1 pure-u-md-1-3">
-            <div class="project-table">
-                <div class="pricing-table-header">
-                    <img class="pricing-table-header-image" src="https://shefcompsoc.uk/images/social/github.png" alt="">
-                </div>
+      <div class="pure-u-1 pure-u-md-1-3">
+        <div class="project-table">
+          <div class="pricing-table-header">
+            <img class="pricing-table-header-image" src="https://shefcompsoc.uk/images/social/github.png" alt="">
+          </div>
 
-                <ul class="pricing-table-list">
-                    <li>OPEN SOURCE PROJECT</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li><button class="button-choose pure-button">See Live!</button>
-                    <p>or view on <a href="#">GitHub</a></p></li>
-                </ul>
+          <ul class="pricing-table-list">
+            <li>OPEN SOURCE PROJECT</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+            <li class="last-li"><button class="button-choose pure-button">See Live!</button>
+              <p class="github-p">or view on <a href="#">GitHub</a></p>
+            </li>
+          </ul>
 
-            </div>
         </div>
+      </div>
 
-    </div> <!-- end pricing-tables -->
+    </div>
+    <!-- end pricing-tables -->
 
     <div id="about" class="about-section information pure-g">
-        <div class="pure-u-1 pure-u-md-1-2">
-            <div class="l-box">
-                <img class="about-photo" src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbpAAAAJDY4M2FhN2MwLTg2YWUtNDJjOC1iZTJjLTM2MjllY2YxYjlmZA.jpg" alt="linkedin">
-            </div>
+      <div class="pure-u-1 pure-u-md-1-2">
+        <div class="l-box">
+          <img class="about-photo" src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbpAAAAJDY4M2FhN2MwLTg2YWUtNDJjOC1iZTJjLTM2MjllY2YxYjlmZA.jpg" alt="linkedin">
         </div>
+      </div>
 
-        <div class="pure-u-1 pure-u-md-1-2">
-            <div class="l-box">
-                <h4 class="info-head">About</h4>
-                <p>
-                    I am a tech newbie that loves all things web development. I am not a genius but I emjoy working hard and learning new things.
-                    What does come second nature for me is all things spiritual and metaphysical. I want to combine both of those passions to find a best fit company that will allow me to make a positive contribution to the World.
-                </p>
-            </div>
+      <div class="pure-u-1 pure-u-md-1-2">
+        <div class="l-box">
+          <h4 class="info-head">About</h4>
+          <p>
+            I am a tech newbie that loves all things web development. I am not a genius but I emjoy working hard and learning new things. What does come second nature for me is all things spiritual and metaphysical. I want to combine both of those passions to find
+            a best fit company that will allow me to make a positive contribution to the World.
+          </p>
         </div>
+      </div>
 
-    </div> <!-- end information -->
-</div> <!-- end l-content -->
+    </div>
+    <!-- end information -->
+  </div>
+  <!-- end l-content -->
 
-<div class="footer l-box">
-  <p>
-        <a href='https://github.com/NoCodingGenius'>
+  <div class="footer l-box">
+    <p>
+      <a href='https://github.com/NoCodingGenius'>
           <img class="footer-image" src="http://www.jordland.com/img/social-media/github-w.png" alt="github">
         </a>
-        <a href="https://steemit.com/@nocodinggenius">
+      <a href="https://steemit.com/@nocodinggenius">
           <img class="footer-image" src="https://steemit-production-imageproxy-thumbnail.s3.amazonaws.com/U5dth7PSzdr6UAzdJFQDAkZCTgAuAtT_1680x8400" alt="steemit-blog">
         </a>
-        <a href="https://www.linkedin.com/in/latoya-williams-82a665112/">
+      <a href="https://www.linkedin.com/in/latoya-williams-82a665112/">
           <img class="footer-image" src="https://seeklogo.com/images/L/linkedin-icon-logo-05B2880899-seeklogo.com.png" alt="linkedin">
         </a>
-  </p>
-</div>
-
-
+    </p>
+  </div>
 
 </body>
+
 </html>
