Make adjustments to li.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           </div>
 
           <ul class="pricing-table-list">
-            <li>ROAM</li>
-            <li>I was commissioned to build a travel community, Roam, for users to share tips about their favorite locations around the world.</li>
-            <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
-            <li class="last-li"><button class="button-choose pure-button">See Live!</button>
-              <p class="github-p">or view on <a href="https://github.com/NoCodingGenius/roam">GitHub</a></p>
+            <li class="main-li">ROAM</li>
+            <li class="main-li">I was commissioned to build a travel community, Roam, for users to share tips about their favorite locations around the world.</li>
+            <li class="main-li">HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
+            <li class="main-li last-li"><button class="button-choose pure-button">See Live!</button>
+              <p class="github-p">or view on <a class="github-p" href="https://github.com/NoCodingGenius/roam">GitHub</a></p>
             </li>
           </ul>
         </div>
@@ -57,11 +57,11 @@
           </div>
 
           <ul class="pricing-table-list">
-            <li>JUST FOR TODAY</li>
-            <li>This is a simple to-do list simgle page app, where users can store their tasks in a database, see their tasks, and mark them complete.</li>
-            <li>HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
-            <li class="last-li"><button class="button-choose pure-button">See Live!</button>
-              <p class="github-p">or view on <a href="#">GitHub</a></p>
+            <li class="main-li">JUST FOR TODAY</li>
+            <li class="main-li">This is a simple to-do list simgle page app, where users can store their tasks in a database, see their tasks, and mark them complete.</li>
+            <li class="main-li">HTML, CSS, EJS, JavaScript, Express, Node, NPM, SQL, Postgres, pg-promise</li>
+            <li class="main-li last-li"><button class="button-choose pure-button">See Live!</button>
+              <p class="github-p">or view on <a class="github-p" href="#">GitHub</a></p>
             </li>
           </ul>
         </div>
@@ -74,11 +74,11 @@
           </div>
 
           <ul class="pricing-table-list">
-            <li>OPEN SOURCE PROJECT</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-            <li class="last-li"><button class="button-choose pure-button">See Live!</button>
-              <p class="github-p">or view on <a href="#">GitHub</a></p>
+            <li class="main-li">OPEN SOURCE PROJECT</li>
+            <li class="main-li">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. eiusmod.</li>
+            <li class="main-li">Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+            <li class="main-li last-li"><button class="button-choose pure-button">See Live!</button>
+              <p class="github-p">or view on <a class="github-p" href="#">GitHub</a></p>
             </li>
           </ul>
 
