--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -25,10 +26,12 @@
   </div>
 
   <div id="home" class="banner">
-    <h1 class="banner-head">
-        LaToya Williams <br>
-        No Coding Genius...
-    </h1>
+
+    <div class="banner-head">
+        <h1>LaToya Williams</h1>
+        <h4>"No Coding Genius..."</h4>
+    </div>
+
   </div>
 
   <div id="portfolio">
@@ -99,7 +102,7 @@
         <div class="l-box">
           <h4 class="info-head">About</h4>
           <p>
-            I am a tech newbie that loves all things web development. I am not a genius but I emjoy working hard and learning new things. What does come second nature for me is all things spiritual and metaphysical. I want to combine both of those passions to find
+            I am a tech newbie that loves all things web development. I am not a genius but I enjoy working hard and learning about new things. What does come second nature for me however, are all things spiritual and metaphysical. I want to combine both of these passions to find
             a best fit company that will allow me to make a positive contribution to the World.
           </p>
         </div>
